# divvy-observer

./: .gitignore  CALIBRATION_VIZ_DESIGN.md  CLAUDE.md  README.md  pyproject.toml  run.sh  run_collector.sh  run_prediction.sh
.claude/: launch.json
docs/: dg_nissm_cdg_nmip.md
launchd/: net.thoughtbison.divvy-collector.plist  net.thoughtbison.divvy-poller.plist
scripts/: backfill_tile_id.py  diagnose_probability_saturation.py  evaluate_dg_nissm.py
src/divvy/: air_quality.py  analytics.py  api.py  automation.py  cc_nissm.py  (+51 more)
tests/: test_automation_jobs.py  test_cc_nissm.py  test_dashboard_metrics.py  test_dashboard_payload.py  test_db.py  test_decision_metrics.py  test_dg_nissm_cdg_nmip.py  test_dg_nissm_constraints.py  test_dg_nissm_evaluation.py  test_dg_nissm_no_leakage.py  test_disabled_predictor.py  test_disabled_tile_api.py  test_dynamic_graph.py  test_forecast_queue.py  test_inferred_flows.py  test_inventory_dp.py  test_label_builder.py  test_launchd_generation.py  test_live_cache.py  test_live_inflight.py  test_macflow_community_fallback.py  test_macflow_device_fallback.py  test_macflow_features.py  test_macflow_nissm.py  test_macflow_no_runtime_training.py  test_macflow_partition_leakage.py  test_macflow_pmf_capacity.py  test_macflow_registry.py  test_macflow_train_sota_cli.py  test_mobility_partitions.py  test_model_eval_legacy_schema.py  test_model_registry.py  test_model_selection.py  test_multi_bike_plan.py  test_no_request_training.py  test_prediction_service.py  test_primary_model_selection.py  test_service_state.py  test_tile.py  test_tile_api.py  (+4 more)
